Se eliminan logs para liberar a produccion

--- a/frontend/emi/civica-card-reload-pos/civica-card-reload-pos.component.html
+++ b/frontend/emi/civica-card-reload-pos/civica-card-reload-pos.component.html
@@ -137,7 +137,7 @@
           *fuseIfOnDom
           [@animate]="{ value: '*', params: { delay: '100ms', x: '-25px' } }"
           style="margin-top: 20px; margin-left: 15px"
-          > Puesto De Venta
+          > Puesto de Venta
           <button *ngIf="operation === 'RELOAD_CARD_SUCCESS'" mat-mini-fab (click)="printInvoice()">
             <mat-icon aria-label="Print invoice" style="color: white">print</mat-icon>
           </button></span
