--- a/frontend/emi/civica-card-reload-pos/reloader-wc/afcc-reloader/internal-error/internal-error.component.html
+++ b/frontend/emi/civica-card-reload-pos/reloader-wc/afcc-reloader/internal-error/internal-error.component.html
@@ -7,7 +7,7 @@
       <mat-list>
         <mat-list-item  *ngIf="errorType === 'INVALID_SESSION'">
           <svg-icon src="assets/civica-card-reload-pos/arrow_right.svg" style="margin-right: 10px" [svgStyle]="{'fill':'#3f51b5'}"></svg-icon>
-          Sesión de usuario inválida, por favor comuniquese con soporte para
+          Sesión de usuario inválida, por favor comuníquese con soporte para
         verificar y solucionar este error
         </mat-list-item>
         <mat-list-item *ngIf="errorType === 'DEFAULT'">
