--- a/frontend/emi/civica-card-reload-pos/reloader-wc/afcc-reloader/read-card-error/read-card-error.component.html
+++ b/frontend/emi/civica-card-reload-pos/reloader-wc/afcc-reloader/read-card-error/read-card-error.component.html
@@ -38,7 +38,7 @@
           style="margin-right: 10px"
           [svgStyle]="{ fill: '#3f51b5' }"
         ></svg-icon>
-        Unidad de negocio inactiva, por favor comuniquese con administración
+        Unidad de negocio inactiva, por favor comuníquese con administración
         para solucionar este problema
       </mat-list-item>
       <mat-list-item *ngIf="operationState === 'BUSINESS_WALLET_NOT_FOUND'">
@@ -48,7 +48,7 @@
           [svgStyle]="{ fill: '#3f51b5' }"
         ></svg-icon>
         Su unidad de negocio no se encuentra con una billetera activa, , por
-        favor comuniquese con administración para solucionar este problema
+        favor comuníquese con administración para solucionar este problema
       </mat-list-item>
       <mat-list-item
         *ngIf="operationState === 'BUSINESS_WALLET_SPENDING_FORBIDDEN'"
