--- a/frontend/emi/civica-card-reload-pos/reloader-wc/afcc-reloader/reload-card-aborted/reload-card-aborted.component.html
+++ b/frontend/emi/civica-card-reload-pos/reloader-wc/afcc-reloader/reload-card-aborted/reload-card-aborted.component.html
@@ -6,7 +6,7 @@
       <mat-list>
         <mat-list-item>
           <svg-icon src="assets/civica-card-reload-pos/arrow_right.svg" style="margin-right: 10px" [svgStyle]="{'fill':'#3f51b5'}"></svg-icon>
-          Por favor comuniquese con la mesa de ayuda para evaluar el caso
+          Por favor comuníquese con la mesa de ayuda para evaluar el caso
         </mat-list-item>
       </mat-list>
     </div>
