Se oculta el campo saldo cuando se esta en el proceso de lectura de tarjeta

--- a/frontend/emi/civica-card-reload-pos/reloader-wc/afcc-reloader/read-card/read-card.component.html
+++ b/frontend/emi/civica-card-reload-pos/reloader-wc/afcc-reloader/read-card/read-card.component.html
@@ -3,7 +3,7 @@
 </div>
 <div style="margin-top: 20px;" class="horizontal-container">
   <div style=" margin:auto; margin-left: 0px; color: #444;" class="vertical-container">
-    <mat-form-field class="example-full-width">
+    <mat-form-field *ngIf="operationState === 'CARD_READED'" class="example-full-width">
       <input matInput name="balance" [(ngModel)]="balance" currencyMask [options]="{ prefix: '$ ', thousands: ',', precision: '0' }" placeholder="Saldo" >
     </mat-form-field>
     <mat-form-field *ngIf="false" class="example-full-width">
@@ -12,8 +12,8 @@
     <mat-form-field *ngIf="operationState === 'CARD_READED'" class="example-full-width">
       <input matInput placeholder="Valor recarga"  [(ngModel)]="value" currencyMask [options]="{ prefix: '$ ', thousands: ',', precision: '0' }" (keyup)="onReloadValueChanged($event)" min="0">
     </mat-form-field>
-    <div *ngIf="operationState === 'CARD_READED'" class="button-container">
-      <button style="margin-right: 10px" (click)="reloadCard()" mat-stroked-button color="primary">Realizar Recarga</button>
+    <div class="button-container">
+      <button *ngIf="operationState === 'CARD_READED'" style="margin-right: 10px" (click)="reloadCard()" mat-stroked-button color="primary">Realizar Recarga</button>
       <button mat-stroked-button (click)="cancelReloadCard()" color="warn">Cancelar</button>
     </div>
   </div>
