--- a/frontend/emi/civica-card-reload-pos/reloader-wc/afcc-reloader/read-card-error/read-card-error.component.html
+++ b/frontend/emi/civica-card-reload-pos/reloader-wc/afcc-reloader/read-card-error/read-card-error.component.html
@@ -41,6 +41,15 @@
         Unidad de negocio inactiva, por favor comuníquese con administración
         para solucionar este problema
       </mat-list-item>
+      <mat-list-item *ngIf="operationState === 'BUSINESS_NOT_FOUND'">
+        <svg-icon
+          src="assets/civica-card-reload-pos/arrow_right.svg"
+          style="margin-right: 10px"
+          [svgStyle]="{ fill: '#3f51b5' }"
+        ></svg-icon>
+        Unidad de negocio no encontrada, por favor comuníquese con administración
+        para solucionar este problema
+      </mat-list-item>
       <mat-list-item *ngIf="operationState === 'BUSINESS_WALLET_NOT_FOUND'">
         <svg-icon
           src="assets/civica-card-reload-pos/arrow_right.svg"
