Added style css to show scrollbar on the detail page

--- a/frontend/emi/civica-card-sales-history/sales-history-detail/sales-history-detail.component.html
+++ b/frontend/emi/civica-card-sales-history/sales-history-detail/sales-history-detail.component.html
@@ -1,4 +1,4 @@
-<div id="user" class="page-layout carded fullwidth" fusePerfectScrollbar>
+<div id="detail" class="page-layout carded fullwidth" fusePerfectScrollbar>
 
   <!-- TOP BACKGROUND -->
   <div class="top-bg mat-accent-bg"></div>
@@ -39,6 +39,7 @@
 
     <!-- CONTENT CARD -->
     <div class="content-card mat-white-bg">
+      <div class="content"></div>
       <mat-tab-group>
         <mat-tab label="{{'SALES_HISTORY.GENERAL' | translate}}">
 
@@ -469,6 +470,7 @@
             </div>
         </mat-tab>
       </mat-tab-group>
+    </div>
     </div>
     <!-- / CONTENT CARD -->
   </div>
