Added style css to show scrollbar on the detail page

--- a/frontend/emi/civica-card-sales-history/sales-history-detail/sales-history-detail.component.html
+++ b/frontend/emi/civica-card-sales-history/sales-history-detail/sales-history-detail.component.html
@@ -39,7 +39,7 @@
 
     <!-- CONTENT CARD -->
     <div class="content-card mat-white-bg">
-      <div class="content"></div>
+      <div class="content">
       <mat-tab-group>
         <mat-tab label="{{'SALES_HISTORY.GENERAL' | translate}}">
 
